<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pagebg"
    android:padding="0dp" >

    <!-- 公用块的引用 -->

    <include
        android:id="@+id/include_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_alignParentTop="true"
        layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_actionbar"
        android:layout_marginLeft="@dimen/common_margin_large"
        android:layout_marginRight="@dimen/common_margin_large"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/login_logo_width"
            android:layout_height="@dimen/login_logo_height"
            android:layout_marginTop="@dimen/common_margin_large"
            android:layout_marginBottom="@dimen/common_margin_large"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_verifyemail_lable1"
            style="@style/title_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin_normal"
            android:text="@string/user_verifyemail_lable_one"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_verifyemail_lable2"
            style="@style/title_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_margin_normal"
            android:text="@string/user_verifyemail_lable_two" />

        <TextView
            android:id="@+id/tv_verifyemail_lable3"
            style="@style/title_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_verifyemail_lable_three" />

        <TextView
            android:id="@+id/tv_ok"
            style="@style/btn_text_black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:clickable="true"
            android:text="@string/app_ok" />
    </LinearLayout>

</RelativeLayout>