<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pagebg"
    android:padding="0dp" >

    <!-- 公用块的引用 -->

    <include
        android:id="@+id/include_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_alignParentTop="true"
        layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_actionbar"
        android:layout_marginLeft="@dimen/common_margin_large"
        android:layout_marginRight="@dimen/common_margin_large"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/login_logo_width"
            android:layout_height="@dimen/login_logo_height"
            android:layout_marginTop="@dimen/common_margin_large"
            android:src="@drawable/logo" />

        <EditText
            android:id="@+id/et_name"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_large"
            android:hint="@string/user_input_email"
            android:inputType="textCapCharacters"
            android:maxLength="30"
            android:visibility="gone" >
        </EditText>

        <EditText
            android:id="@+id/et_email"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_large"
            android:hint="@string/user_input_email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:text="252385185@qq.com" >
        </EditText>

        <EditText
            android:id="@+id/et_pwd"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/user_input_pwd"
            android:inputType="textPassword"
            android:maxLength="30"
            android:text="123456" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/btn_text_black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:clickable="true"
            android:text="@string/user_login" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_normal"
            android:clickable="true"
            android:text="@string/user_forget_pwd"
            android:textColor="@color/user_forget_color"
            android:textSize="@dimen/common_font_small" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        style="@style/btn_text_black"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edittext_height"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/common_margin_large"
        android:layout_marginLeft="@dimen/common_margin_large"
        android:layout_marginRight="@dimen/common_margin_large"
        android:clickable="true"
        android:text="@string/user_reg" />

</RelativeLayout>