<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pagebg"
    android:padding="0dp" >

    <!-- 公用块的引用 -->

    <include
        android:id="@+id/include_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_alignParentTop="true"
        layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_actionbar"
        android:layout_marginLeft="@dimen/common_margin_large"
        android:layout_marginRight="@dimen/common_margin_large"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/et_device_name"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:hint="@string/device_configure_name"
            android:inputType="textCapCharacters"
            android:maxLength="30" >
        </EditText>

        <EditText
            android:id="@+id/et_zipcode"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:hint="@string/device_configure_zipcode"
            android:inputType="number"
            android:maxLength="10" >
        </EditText>

        <TextView
            android:id="@+id/tv_device_configure_submit"
            style="@style/btn_text_black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:clickable="true"
            android:text="@string/app_submit" />
    </LinearLayout>

</RelativeLayout>