<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pagebg"
    android:padding="0dp" >

    <!-- 公用块的引用 -->

    <include
        android:id="@+id/include_actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_height"
        android:layout_alignParentTop="true"
        layout="@layout/actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/include_actionbar"
        android:layout_marginLeft="@dimen/common_margin_large"
        android:layout_marginRight="@dimen/common_margin_large"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/login_logo_width"
            android:layout_height="@dimen/login_logo_height"
            android:layout_marginTop="@dimen/common_margin_large"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tv_user_email"
            style="@style/title_text_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin_large"
            android:text="xxxx@gmail.com" />

        <EditText
            android:id="@+id/et_old_pwd"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/user_input_oldpwd"
            android:inputType="textPassword"
            android:maxLength="30" />

        <EditText
            android:id="@+id/et_new_pwd"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/user_input_newpwd"
            android:inputType="textPassword"
            android:maxLength="30" />

        <EditText
            android:id="@+id/et_pwd_confirm"
            style="@style/edittext_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="@string/user_input_pwd_confirm"
            android:inputType="textPassword"
            android:maxLength="30" />

        <TextView
            android:id="@+id/tv_change_pwd_submit"
            style="@style/btn_text_black"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edittext_height"
            android:layout_marginTop="@dimen/common_margin_medium"
            android:clickable="true"
            android:text="@string/app_submit" />
    </LinearLayout>

</RelativeLayout>